scoring/errlog/undefined.log
./scoring/source/undefined.cpp:1:1: error: unknown type name 'adsfsdf'
adsfsdf
^
./scoring/source/undefined.cpp:1:8: error: expected unqualified-id
adsfsdf
       ^
2 errors generated.
